--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel ./presentations/0/index.html",
     "build": "parcel build ./presentations/**/index.html --public-url https://drag13.io/react-learning-course-short",
-    "readme": "node tools/generator.js",
+    "readme": "node tools/docs.js",
     "scaffold": "node tools/scaffold.js",
     "encode": "node tools/encode.js"
   },
